# bevy_editor_pls

./: .gitignore  Cargo.toml
crates/bevy_editor_pls/: Cargo.toml
crates/bevy_editor_pls/assets/models/doodads/: Elven_constellation_rings.glb  Elven_statue_01.glb  SM_Env_Rock_Cliff.glb  SM_Env_Rock_Cliff_2.glb  SM_Env_Rock_Cliff_3.glb  SM_Env_Rock_Cliff_4.glb  tent_1.glb
crates/bevy_editor_pls/src/: lib.rs
crates/bevy_editor_pls_custom_windows/: Cargo.toml
crates/bevy_editor_pls_custom_windows/src/: lib.rs  zones.rs
crates/bevy_editor_pls_custom_windows/src/doodads/: doodad.rs  doodad_manifest.rs  mod.rs  picking.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/bevy_editor_pls_default_windows/src/: doodads.rs  lib.rs  placement.rs  zones.rs
crates/bevy_editor_pls_default_windows/src/cameras/: camera_3d_free.rs  camera_3d_panorbit.rs  mod.rs
crates/bevy_editor_pls_default_windows/src/doodads/: mod.rs  picking.rs
crates/bevy_editor_pls_default_windows/src/hierarchy/: mod.rs
crates/bevy_editor_pls_default_windows/src/zones/: mod.rs  zone_file.rs
